@@ -609,9 +609,10 @@ namespace PloppableRICO
                 }
                 else
                 {
-                    if ((workplaceCount == 0) && service != "" && service != "none")
+                    if ((workplaceCount == 0) && service != "" && service != "none" && service != "dummy")
                     {
                         errors.AppendLine("Building '" + name + "' provides " + service + " jobs but no jobs are set.");
+                        ItemClass.Service.
                     }
                 }
 
